Updated Login to stop the body bleeding through from the dashboard

--- a/manageme/src/Pages/login/Login.css
+++ b/manageme/src/Pages/login/Login.css
@@ -22,7 +22,7 @@ body {
   height: 100vh;
   background-size: cover;
   background-position: center;
-  background-color: #783cc8;
+  background-color: #783cc8 !important;
 }
 
 .login-container {
